# sudoku-backtracking-solver

./: .gitignore  LICENSE  README.md  sudoku-backtracking-solver.cabal
src/: ListSolver.hs  MatrixSolver.hs
test/: Benchmark.hs  DocTest.hs  Spec.hs  TestData.hs
