name:                sudoku-backtracking-solver
version:             1.0.0.0
synopsis:            Sudoku backtracking solver
description:         Please see README.md
homepage:            https://github.com/hator/sudoku-backtracking-solver#readme
license:             MIT
license-file:        LICENSE
author:              Jan Michalski
maintainer:          jan.michalski[at]buzytor.com
copyright:           2016 Jan Michalski
category:            Algorithms
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     MatrixSolver
                     , ListSolver
  build-depends:       base >= 4.7 && < 5
                     , matrix
                     , data-ordlist
                     , lens
                     , split
                     , vector
                     , vector-algorithms
  default-language:    Haskell2010

test-suite solver-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       TestData
  build-depends:       base
                     , sudoku-backtracking-solver
                     , HUnit
                     , hspec
  default-language:    Haskell2010

test-suite doctest
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             DocTest.hs
  build-depends:       base
                     , doctest
                     , Glob
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark solver-benchmark
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Benchmark.hs
  other-modules:       TestData
  build-depends:       base
                     , sudoku-backtracking-solver
                     , criterion
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hator/sudoku-backtracking-solver.git
